styles/all.css
html, body { width: 100%; background-color: #ECEFF1;}
html { -webkit-text-size-adjust: 100%; }

@media (prefers-color-scheme: dark) {
  html, body {
    background-color: #000;
  }
}

/* Base styles */
body { 
  color: rgba(0,0,0,0.8); 
  font-family: system-ui; 
  margin: 0; 
  padding: 0;
  font-size: 100%;
}

ul { list-style-type: none; }

/* Links */
a:link, a:visited { 
  color: #0089ff; 
  text-decoration: none; 
  border-bottom: 1px solid rgba(0,137,255,.3); 
}

/* Layout */
.container { 
  margin-left: auto; 
  margin-right: auto;
  padding-left: max(1rem, env(safe-area-inset-left));
  padding-right: max(1rem, env(safe-area-inset-right));
  box-sizing: border-box;
}

/* Logo styling */
#logo { 
  display: inline-block; 
  vertical-align: middle; 
}

/* Navigation */
#hamburger { display: none; }

#page-nav { 
  width: 100%; 
  background: #000; 
  position: fixed; 
  top: 0; 
  z-index: 999; 
}

#page-nav div a { 
  line-height: 50px;
  display: inline-block;
}

#page-nav ul { 
  margin: 0; 
  padding: 0; 
  display: none; 
}

#page-nav ul li { 
  display: block; 
  line-height: 2.5em; 
  text-transform: uppercase; 
  transition: .5s 
}

#page-nav ul li.current { 
  background: rgba(255,255,255,.5); 
}

#page-nav ul li a { 
  display: block; 
  padding: 0 0.9375em; 
  color: #fff; 
  text-decoration: none; 
  font-size: 0.875em; 
  font-weight: 500; 
  width: 100%;
}

#page-nav label { 
  display: block; 
  color: #fff; 
  font-style: normal; 
  font-size: 1.2em; 
  float: right; 
}

#page-nav input:checked ~ ul { 
  display: block; 
}

/* Content sections */
section { 
  padding-top: 1.875em; 
  padding-bottom: 3.75em; 
  font-size: 1.2em; 
  text-align: left; 
}

section p { 
  margin: 0 0 1.5625em; 
  line-height: 1.5; 
}

section h4 { 
  color: #000; 
  padding-bottom: 0.4em; 
  margin-top: 1em;
  margin-bottom: 0.5em;
}

/* Hamburger menu */
#menu-label {
  width: 50px;
  height: 50px; 
  position: relative; 
  padding: 0; 
  -webkit-transform: rotate(0deg); 
  -moz-transform: rotate(0deg); 
  -o-transform: rotate(0deg); 
  transform: rotate(0deg); 
  -webkit-transition: .5s ease-in-out; 
  -moz-transition: .5s ease-in-out; 
  -o-transition: .5s ease-in-out; 
  transition: .5s ease-in-out; 
  cursor: pointer; 
}

#menu-label span { 
  display: block; 
  position: absolute; 
  height: 2px; 
  width: 18px; 
  background: rgba(255,255,255,.87); 
  opacity: 1;
  left: 16px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .25s ease-in-out;
  -moz-transition: .25s ease-in-out;
  -o-transition: .25s ease-in-out; 
  transition: .25s ease-in-out; 
}

#menu-label span:nth-child(1) { top: 17px; }
#menu-label span:nth-child(2), #menu-label span:nth-child(3) { top: 24px; }
#menu-label span:nth-child(2) { opacity: 0; }
#menu-label span:nth-child(4) { top: 31px; }

#page-nav input:checked ~ label span:nth-child(1), 
#page-nav input:checked ~ label span:nth-child(4) {
  top: 24px; 
  width: 0%; 
  left: 50%; 
}

#page-nav input:checked ~ label span:nth-child(2) { 
  -webkit-transform: rotate(45deg); 
  -moz-transform: rotate(45deg); 
  -o-transform: rotate(45deg); 
  transform: rotate(45deg); 
  opacity: 1; 
}

#page-nav input:checked ~ label span:nth-child(3) { 
  -webkit-transform: rotate(-45deg); 
  -moz-transform: rotate(-45deg); 
  -o-transform: rotate(-45deg); 
  transform: rotate(-45deg); 
}

#page-nav a { border-bottom: none; }

/* Down arrow animation */
#arrow { 
  position: absolute; 
  bottom: 6.25em; 
  left: 50%; 
  height: 40px; 
  width: 6px; 
  background: #fff; 
  animation: animate 2s 4s infinite; 
  animation-fill-mode: both; 
  opacity: 0; 
}

#arrow.stopped { animation: none; }

#arrow::before { 
  content: ""; 
  position: absolute; 
  bottom: 0; 
  left: -10px; 
  width: 20px; 
  height: 20px; 
  border-bottom: 6px solid #fff; 
  border-right: 6px solid #fff; 
  transform: rotate(45deg); 
}

@keyframes animate {
  0%, 5%, 95%, 100% { transform: translateY(0); opacity: 0.0; }
  50% { transform: translateY(50px); opacity: 0.9; }
}

/* Social links */
#social { list-style: none; padding-left: 0; }
#social * { width: 40px; height: 40px;}
#social li { display: inline-block; margin: 0 5px; vertical-align: top; }
#social a { display: inline-block; vertical-align: top; }
#social a.email { display: inline; }
#social a.icon { border-bottom: none; }
#social svg path { fill: #202020; }
#social li:last-child { width: 100%; }
#social li:last-child * { width: auto; line-height: 40px; }

/* Hover effects */
#social svg {
  transition: transform .2s;
  will-change: transform;
}

@media (hover: hover) {
  #social a:hover svg {
    transform: scale(1.1,1.1);
  }
  
  a:link:hover, a:visited:hover { 
    color: #f41224; 
    border-color: rgba(244,18,36,.3); 
  }
}

/* Responsive layouts */
@media screen and (min-width: 598px) {
  #social li:last-child { 
    float: right; 
    width: auto; 
  }
}

@media screen and (min-width: 768px) {
  .container { width: 750px; }
  
  #page-nav label, #hamburger { display: none; }
  
  #page-nav ul { 
    display: block; 
    float: right; 
  }
  
  #page-nav ul li { 
    display: inline-block; 
    margin-left: -4px; 
  }
  
  section { font-size: 1.25em; }
  
  section p { 
    margin: 0 0 2.1875em; 
    line-height: 1.6; 
  }        
}

@media screen and (min-width: 992px) {
  .container { width: 970px; }
}

/* Dark theme adjustments */
@media (prefers-color-scheme: dark) {
  body { 
    color: rgba(255,255,255,0.8); 
  }
  
  a:link, a:visited { 
    color: #64b2ff; 
    border-bottom: 1px solid rgba(100,178,255,0.8); 
  }  
}

@media (hover: hover) and (prefers-color-scheme: dark) {
  a:link:hover, a:visited:hover { 
    color: #ff453a; 
    border-color: rgba(255,69,68,.7); 
  }
}

